Update: add scroll snap and scrollTo fix on mobile

--- a/src/components/MintSteps/index.module.scss
+++ b/src/components/MintSteps/index.module.scss
@@ -1,11 +1,31 @@
 @import '../../styles/scss/default/variables';
 @import '../../styles/scss/default/animations';
 
+.container {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  width: 100vw;
+  height: 100vh;
+  scroll-behavior: smooth;
+
+  scroll-padding-top: 30vh;
+
+  // Height fix on mobile
+  min-height: -webkit-fill-available;
+  min-height: -moz-available;
+}
 .page {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
 
   width: 100vw;
   height: 100vh;
